--- a/html/createStreamConditioning.html
+++ b/html/createStreamConditioning.html
@@ -33,6 +33,7 @@
 
     <div class="form-fields">
         <form action="#" class="form-stream-conditioning">
+            <div><span>Service</span><input type="text" value="Stream Conditioning" id="input-stream-conditioning" placeholder="Stream Conditioning" disabled></div>
             <div><span>Type</span><input type="text" value="ESAM" placeholder="ESAM" disabled></div>
             <div><span>Version</span><input type="text" value="2013" placeholder="2013" disabled></div>
             <div><span>Expect Notifications</span><input type="checkbox" id="input-notifications" disabled></div>
@@ -68,8 +69,8 @@
                         <div id="signal-acquisitions-container">
                             <span>Signal Acquisitions</span>
                             <div id="signal-block-container">
-                                <div><span>URL</span><input type="text" placeholder="http://" id="sa-input-url"></div>
-                                <div><span>Listening Path</span><input type="text" placeholder="/" id="sa-input-listening-path"></div>
+                                <div><span>URL</span><input type="text" placeholder="http://" value="http://" id="sa-input-url"></div>
+                                <div><span>Listening Path</span><input type="text" placeholder="/" value="/" id="sa-input-listening-path"></div>
                                 <div><span>Actions</span><span id="button-trash-signal-aq"><i class="fa-solid fa-trash"></i></span></div>
                             </div>
                             <button type="button" class="button-add "id="button-add-block"><i class="fa-solid fa-plus"></i>Add</button>
@@ -102,7 +103,7 @@
 
     <div class="endpoints-values" id="endpoints-values"></div>
 
-
+    <script src="../js/viewServices.js"></script>
     <script src="../js/streamConditioning.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
