--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a href="#" class><i class="fa-solid fa-plus"></i>Add Service</a>
             </button>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                <li><a class="dropdown-item" href="#">Live encoding</a></li>
+                <li><a class="dropdown-item" href="./html/createLiveEnconding.html">Live encoding</a></li>
                 <li><a class="dropdown-item" href="./html/createStreamConditioning.html">Stream Conditioning</a></li>
               <li><a class="dropdown-item" href="./html/createPlaylist.html">Playlist</a></li>
               <!-- <li><a class="dropdown-item" href="#">Edit playlist</a></li>
@@ -46,14 +46,21 @@
     </section>
 
     <div class="channels-container">
-        <div>
+        <div class="channels-headers">
             <p>Name</p>
             <p>Type of</p>
             <p>Functions</p>
         </div>
+
+        <div class="channels" id="channels">
+
+        </div>
     </div>
+
     
-    <script src="./js/index.js"></script>
+
+    
+    <script src="./js/viewServices.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
